--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_learn-profitably.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_learn-profitably.scss
@@ -1,169 +1,171 @@
-.learn-profitably {
-    background-color: $color-sale-yellow;
-    padding: 52px 0;
-    position: relative;
-    z-index: 1;
-    background-image: url(../images/sales-page/learn-mob.svg);
-          background-repeat: no-repeat;
-          background-position: top 70px center;
-          background-size: 246px auto contain;
-    @media screen and (min-width: 768px) {
-        padding: 88px 0;
-        background-image: url(../images/sales-page/learn-tab.svg);
+.sale_page {
+
+    .learn-profitably {
+        background-color: $color-sale-yellow;
+        padding: 52px 0;
+        position: relative;
+        z-index: 1;
+        background-image: url(../images/sales-page/learn-mob.svg);
+        background-repeat: no-repeat;
+        background-position: top 70px center;
+        background-size: 246px auto contain;
+        @media screen and (min-width: 768px) {
+            padding: 88px 0;
+            background-image: url(../images/sales-page/learn-tab.svg);
             background-position: top -20px right -10px;
-          background-size: 946px auto contain;
-    }
-    @media screen and (min-width: 1200px) {
-        padding: 116px 0;
-          background-image: url(../images/sales-page/learn-desk.svg);
-                background-position: top -20px right 20px;
-                background-size: 100% auto contain;
-    }
-    // &::before{
-    //       content: '';
-    //       display: block;
-    //       z-index: 1;
-    //       width: 100%;
-    //       height: 100%;
-    //       position: absolute;
-    //       background-image: url(../images/sales-page/learn-mob.svg);
-    //       background-repeat: no-repeat;
-    //       background-position: top 70px center;
-    //       background-size: 246px auto contain;
-      
-    //       @media screen and (min-width: 768px) {
-    //         background-image: url(../images/sales-page/learn-tab.svg);
-    //         background-position: top -20px right -10px;
-    //       background-size: 946px auto contain;
-    //       }
-    //         @media screen and (min-width: 1200px) {
-                // background-image: url(../images/sales-page/learn-desk.svg);
-                // background-position: top -20px right 20px;
-                // background-size: 100% auto contain;
-    //         }
-    //     }
-}
-.learn-profitably_img {
-    display: block;
-    margin-bottom: 94px;
-    @media screen and (min-width: 768px) {
-        margin-bottom: 0;
-     }
-}
-.learn-profitably_img-wrap{
-margin-bottom: 94px;
-@media screen and (min-width: 768px) {
-   margin-bottom: 0;
-   margin-left: -15%;
-}
-@media screen and (min-width: 1200px) {
-    margin-left: 0;
-  }
-}
-.learn-profitably_list {
-    display: flex;
-    flex-direction: column;
-    gap:66px;
-  
-    @media screen and (min-width: 768px) and (max-width: 1199px){
-        margin-left: -48%;
-        display: grid;
-        row-gap: 95px;
-        column-gap: 32px;
-        grid-template-columns:1fr 1fr;
-        grid-template-rows:minmax(100px, auto);
-    }
-    @media screen and (min-width: 1200px) {
-        display: grid;
-      margin-left: 58px;
-      width: 64%; 
-      row-gap: 0;
-      column-gap: 32px;
+            background-size: 946px auto contain;
+        }
+        @media screen and (min-width: 1200px) {
+            padding: 116px 0;
+            background-image: url(../images/sales-page/learn-desk.svg);
+            background-position: top -20px right 20px;
+            background-size: 100% auto contain;
+        }
+        // &::before{
+        //       content: '';
+        //       display: block;
+        //       z-index: 1;
+        //       width: 100%;
+        //       height: 100%;
+        //       position: absolute;
+        //       background-image: url(../images/sales-page/learn-mob.svg);
+        //       background-repeat: no-repeat;
+        //       background-position: top 70px center;
+        //       background-size: 246px auto contain;
 
+        //       @media screen and (min-width: 768px) {
+        //         background-image: url(../images/sales-page/learn-tab.svg);
+        //         background-position: top -20px right -10px;
+        //       background-size: 946px auto contain;
+        //       }
+        //         @media screen and (min-width: 1200px) {
+        // background-image: url(../images/sales-page/learn-desk.svg);
+        // background-position: top -20px right 20px;
+        // background-size: 100% auto contain;
+        //         }
+        //     }
     }
+    .learn-profitably_img {
+        display: block;
+        margin-bottom: 94px;
+        @media screen and (min-width: 768px) {
+            margin-bottom: 0;
+        }
+    }
+    .learn-profitably_img-wrap{
+        margin-bottom: 94px;
+        @media screen and (min-width: 768px) {
+            margin-bottom: 0;
+            margin-left: -15%;
+        }
+        @media screen and (min-width: 1200px) {
+            margin-left: 0;
+        }
+    }
+    .learn-profitably_list {
+        display: flex;
+        flex-direction: column;
+        gap:66px;
+
+        @media screen and (min-width: 768px) and (max-width: 1199px){
+            margin-left: -48%;
+            display: grid;
+            row-gap: 95px;
+            column-gap: 32px;
+            grid-template-columns:1fr 1fr;
+            grid-template-rows:minmax(100px, auto);
+        }
+        @media screen and (min-width: 1200px) {
+            display: grid;
+            margin-left: 58px;
+            width: 64%;
+            row-gap: 0;
+            column-gap: 32px;
+
+        }
+    }
+    .learn-profitably_item {
+        flex-basis: 100%;
+        position: relative;
+        border-radius: 12px;
+        padding: 66px 20px 20px 20px;
+        background-color: $color-white;
+        @media screen and (min-width: 768px) {
+            padding:66px 86px 20px 20px;
+            width: 336px;
+        }
+        @media screen and (min-width: 1200px) {
+            padding: 60px 50px 20px 20px;
+            width: 300px;
+            max-height: 252px;
+        }
+
+        &:nth-child(1){
+            @media screen and (min-width: 768px) and (max-width: 1199px) {
+                grid-column: 2 / 3;
+                grid-row: 1 / 2;
+            }
+            @media screen and (min-width: 1200px){
+                grid-column: 1 / 2;
+                grid-row: 1 / 3;
+            }
+        }
+        &:nth-child(2){
+            @media screen and (min-width: 768px) and (max-width: 1199px) {
+                grid-column: 2 / 3;
+                grid-row: 2 / 3;
+
+            }
+            @media screen and (min-width: 1200px){
+                grid-column: 2 / 3;
+                grid-row: 1 / 3;
+                margin-top: 80px;
+            }
+        }
+        &:nth-child(3){
+            @media screen and (min-width: 768px) and (max-width: 1199px) {
+                grid-column: 1 / 2;
+                grid-row: 3 / 4;
+
+            }
+            @media screen and (min-width: 1200px){
+                grid-column: 1 / 2;
+                grid-row: 3 / 5;
+                margin-top: 10%;
+            }
+        }
+        &:nth-child(4){
+            @media screen and (min-width: 768px) and (max-width: 1199px) {
+                grid-column: 2 / 3;
+                grid-row: 3 / 4;
+
+            }
+            @media screen and (min-width: 1200px){
+                grid-column: 2 / 3;
+                grid-row: 3 / 5;
+                margin-top: 80px;
+            }
+        }
+
+        & > svg {
+            position: absolute;
+            top:-15%;
+            left:20px;
+        }
+        & > h3{
+            font-size: 20px;
+            line-height: 1.3;
+            margin-bottom: 16px;
+            font-weight: 700;
+            color: $color-black;
+        }
+        & > p{
+            color:$color-black;
+            font-size: 18px;
+            line-height: 1.45;
+
+        }
+    }
+
 }
-.learn-profitably_item {
-    flex-basis: 100%;
-    position: relative;
-    border-radius: 12px;
-    padding: 66px 20px 20px 20px;
-    background-color: $color-white;
-    @media screen and (min-width: 768px) {
-        padding:66px 86px 20px 20px;
-        width: 336px;
-    }
-    @media screen and (min-width: 1200px) {
-        padding: 60px 50px 20px 20px;
-      width: 300px;
-      max-height: 252px;
-    }
-
-    &:nth-child(1){
-        @media screen and (min-width: 768px) and (max-width: 1199px) {
-            grid-column: 2 / 3;
-            grid-row: 1 / 2;
-        }
-        @media screen and (min-width: 1200px){
-            grid-column: 1 / 2;
-            grid-row: 1 / 3;
-        }
-    }
-    &:nth-child(2){
-        @media screen and (min-width: 768px) and (max-width: 1199px) {
-            grid-column: 2 / 3;
-            grid-row: 2 / 3;
-            
-        }
-        @media screen and (min-width: 1200px){
-            grid-column: 2 / 3;
-            grid-row: 1 / 3;
-            margin-top: 80px;
-        }
-    }
-    &:nth-child(3){
-        @media screen and (min-width: 768px) and (max-width: 1199px) {
-            grid-column: 1 / 2;
-            grid-row: 3 / 4;
-            
-        }
-        @media screen and (min-width: 1200px){
-            grid-column: 1 / 2;
-            grid-row: 3 / 5;
-            margin-top: 10%;
-        }
-    }
-    &:nth-child(4){
-        @media screen and (min-width: 768px) and (max-width: 1199px) {
-            grid-column: 2 / 3;
-            grid-row: 3 / 4;
-            
-        }
-        @media screen and (min-width: 1200px){
-     grid-column: 2 / 3;
-            grid-row: 3 / 5;
-            margin-top: 80px;
-        }
-    }
-    
-    & > svg {
-        position: absolute;
-        top:-15%;
-        left:20px;
-    }
-    & > h3{
-        font-size: 20px;
-        line-height: 1.3;
-        margin-bottom: 16px;
-        font-weight: 700;
-        color: $color-black;
-    }
-    & > p{
-        color:$color-black;
-        font-size: 18px;
-        line-height: 1.45;
-    
-    }
-}
-
-
 
