--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_sales-section-title.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_sales-section-title.scss
@@ -1,66 +1,70 @@
-.sales-section-title{
-    text-align: center;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 1.3;
-    margin-bottom: 32px;
-    text-transform: uppercase;
-    color: $color-sale-black;
+.sale_page {
 
-    @media screen and (min-width: 768px) {
-        font-size: 34px;
-        margin-bottom: 40px;
-    };
-    @media screen and (min-width: 1200px) {
-        font-size: 44px;
+    .sales-section-title{
+        text-align: center;
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 1.3;
+        margin-bottom: 32px;
+        text-transform: uppercase;
+        color: $color-sale-black;
+
+        @media screen and (min-width: 768px) {
+            font-size: 34px;
+            margin-bottom: 40px;
+        };
+        @media screen and (min-width: 1200px) {
+            font-size: 44px;
+            margin-bottom: 52px;
+        };
+
+    }
+    .sales-section-title--hero{
+        position: absolute;
+        font-size: 22px;
+        margin: 0;
+        text-align: left;
+        top: 80px;
+        z-index: 5;
+
+        @media screen and (min-width: 768px) {
+            top: 220px;
+            font-size: 32px;
+        };
+        @media screen and (min-width: 1200px) {
+            top: 240px;
+            font-size: 48px;
+        };
+
+    }
+    .sales-section-title--learn-profitably{
+
         margin-bottom: 52px;
-    };
+        text-align: start;
+        padding-left: 5%;
+        @media screen and (min-width: 768px) {
 
-}
-.sales-section-title--hero{
-    position: absolute;
-    font-size: 22px;
-    margin: 0;
-    text-align: left;
-    top: 80px;
-    z-index: 5;
+            text-align: start;
+            padding-left: 5%;
+        };
+        @media screen and (min-width: 1200px) {
 
-    @media screen and (min-width: 768px) {
-        top: 220px;
-        font-size: 32px;
-    };
-    @media screen and (min-width: 1200px) {
-        top: 240px;
-        font-size: 48px;
-    };
+            margin-bottom: 93px;
+        };
+    }
+    .sales-hero_title {
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 1.3;
+        text-transform: uppercase;
+        color: $color-sale-black;
 
-}
-.sales-section-title--learn-profitably{
- 
-margin-bottom: 52px;
-text-align: start;
-padding-left: 5%;
-@media screen and (min-width: 768px) {
-    
-    text-align: start;
-    padding-left: 5%;
-};
-@media screen and (min-width: 1200px) {
-   
-    margin-bottom: 93px;
-};
-}
-.sales-hero_title {
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 1.3;
-    text-transform: uppercase;
-    color: $color-sale-black;
- 
-    @media screen and (min-width: 768px) {
-        font-size: 32px;
-    };
-    @media screen and (min-width: 1200px) {
-        font-size: 48px;
-    };
+        @media screen and (min-width: 768px) {
+            font-size: 32px;
+        };
+        @media screen and (min-width: 1200px) {
+            font-size: 48px;
+        };
+    }
+
 }
